--- a/pPT/style.css
+++ b/pPT/style.css
@@ -14,10 +14,40 @@ header {
 	display: flex;
 	justify-content: center;
 	padding: 30px 0;
-	margin-bottom: 40px;
 }
 header > h1 {
 	font-size: 2.5rem;
+}
+
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 50px auto;
+	gap: 30px;
+}
+
+.container .user-play {
+	background-color: transparent;
+	border: none;
+	padding: 30px 60px;
+	border: 1px solid black;
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 14px;
+	font-size: 1.5rem;
+	cursor: pointer;
+	transition: 0.5s;
+}
+.user-play:hover {
+	transform: scale(1.1);
+	background-color: black;
+	color: white;
+}
+.user-play i {
+	font-size: 80px;
 }
 
 footer {
