--- a/pPT/style.css
+++ b/pPT/style.css
@@ -21,13 +21,24 @@ header > h1 {
 
 .container {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 40px;
+	padding-bottom: 40px;
+}
+.container h2 {
+	font-size: 2rem;
+}
+.containerBtns {
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin: 50px auto;
 	gap: 30px;
 }
 
-.container .user-play {
+.containerBtns .user-play {
 	background-color: transparent;
 	border: none;
 	padding: 30px 60px;
@@ -48,6 +59,27 @@ header > h1 {
 }
 .user-play i {
 	font-size: 80px;
+}
+
+.containerResultados{
+	border: 1px solid lightgray;
+	border-radius: 6px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	padding: 30px 50px;
+}
+.containerResultados p {
+	font-size: 1.3rem;
+}
+.containerResultados p:first-of-type {
+	background-color: black;
+	color: white;
+	width: 100%;
+	text-align: center;
+	border-radius: 6px;
+	padding: 4px 6px;
 }
 
 footer {
