--- a/pPT/style.css
+++ b/pPT/style.css
@@ -14,6 +14,7 @@ header {
 	display: flex;
 	justify-content: center;
 	padding: 30px 0;
+	margin-bottom: 50px;
 }
 header > h1 {
 	font-size: 2.5rem;
@@ -34,11 +35,11 @@ header > h1 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 50px auto;
+	margin-bottom: 50px;
 	gap: 30px;
 }
 
-.containerBtns .user-play {
+.cardOperation {
 	background-color: transparent;
 	border: none;
 	padding: 30px 60px;
@@ -52,16 +53,40 @@ header > h1 {
 	cursor: pointer;
 	transition: 0.5s;
 }
-.user-play:hover {
+.cardOperation:hover {
 	transform: scale(1.1);
 	background-color: black;
 	color: white;
 }
-.user-play i {
+.cardOperation i {
 	font-size: 80px;
 }
 
-.containerResultados{
+#selJugadores {
+	display: flex;
+	gap: 30px;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	display: none;
+}
+#selJugadores h3 {
+	font-size: 1.8rem;
+}
+#selJugadores .cardOperation:hover {
+	transform: scale(1);
+	background-color: transparent;
+	color: black;
+	cursor: inherit;
+}
+#selJugadores .pOperacionElegida {
+	font-size: 1.5rem;
+}
+#selJugadores .pOperacionElegida i {
+	display: block;
+	margin-bottom: 14px;
+}
+.containerResultados {
 	border: 1px solid lightgray;
 	border-radius: 6px;
 	display: flex;
